=================
Changes for Crate
=================

Unreleased
==========

 - Fix: removed unsupported syntax from ``Update`` synposis

 - Support column referencing in ``Update`` statement assignment
   expression

 - Removed undocumented feature: It is no longer possible to use sys
   expressions in any context.

 - don’t allow full qualified names in UPDATE assignments, INSERT and
   INSERT INTO

 - The ``sys.operations`` table has now a ``_nodes`` system column
   which exposes information about the node the operation runs on.

2015/01/19 0.46.3
2015/01/19 0.45.7
=================

 - SELECT statements that involved tables from the information_schema schema or
   from the sys schema could fail if they contained columns in the ORDER BY
   clause but didn't contain these columns in the result column list.

 - Fix: Return zero row count instead of an exception if update by id
   doesn't match any document

 - Fixed an issue in the ``sys.shards`` table which caused an
   exception when the select limit was lower then the number of
   matching shards on a node.

 - Fixed type conversion of bulk parameters

 - Updated crate-admin to version 0.11.2 which includes following changes:

    - removed usage of sys expressions in wrong context

    - fixed a template rendering issue in cluster view in Safari

    - de-register watches to decrease DOM updates and improve
      performance in cluster view

    - fixed title of `tables` view if no tables exists or connection is down

2015/01/14 0.46.2
=================

 - improved string lookup performance for group queries and global aggregates

 - Optimized memory estimates for min()/max() aggregates for the CircuitBreaker

2015/01/14 0.46.2
2015/01/19 0.45.7
=================

 - fix: throw correct exception if `_version` is misused in WHERE clause

 - improved speed of Alter table settings in partitioned tables

 - Restricted allowed characters in column names

2014/12/22 0.46.1
=================
