@@ -5,6 +5,8 @@ Changes for Crate
 Unreleased
 ==========
 
+ - Added support for the datetime function ``extract (field from source)``
+
  - Fix: removed unsupported syntax from ``Update`` synposis
 
  - Support column referencing in ``Update`` statement assignment
@@ -2097,3 +2099,4 @@ Unreleased
 ================
 
  - added NOTICE file
+
